syntax = "proto3";
import "google/protobuf/timestamp.proto";

package api;

option go_package = "github.com/takeru-a/fakeself_backend/grpc";

service UserService{
    rpc CreateUser(CreateUserRequest) returns (UserResponse){}
    rpc GetUser(UserRequest) returns (UserResponse){}
    rpc UpdateUser(UpdateUserRequest) returns (UserResponse){}
}

message User{
    string Id = 1;
    string Name = 2;
    int64 Answer = 3;
    int64  Score = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

message UserResponse { User user = 1; }

message CreateUserRequest {
    string Name = 1;
    int64 Answer = 2;
    int64  Score = 3;
  }

message UserRequest { string Id = 1; }

message UpdateUserRequest {
    string Id = 1;
    optional string Name = 2;
    optional int64 Answer = 3;
    optional int64 Score = 4;
}